--- a/src/app/experience-feature/experience-form/experience-form.component.html
+++ b/src/app/experience-feature/experience-form/experience-form.component.html
@@ -1,6 +1,6 @@
 
 <div class="max-w-5xl mx-auto">
-  <app-to-dashboard [title]="experienceForm.value.name"
+  <app-to-dashboard [title]="experienceForm.value.profession"
                     class="mt-6 flex ml-16"
   ></app-to-dashboard>
   <div class="mt-8 mb-12 mx-auto px-4 sm:px-6 lg:px-8 bg-Jblue rounded-3xl mr-6 ml-6 border-white border-2 bg-gradient-to-b from-indigo-600 to-Jblue ">
