--- a/src/app/language-feature/language/language.component.html
+++ b/src/app/language-feature/language/language.component.html
@@ -9,10 +9,10 @@
       <div class="px-4 py-5 sm:px-6  bg-gradient-to-b from-indigo-500 to-Jblue ">
 
         <div class="flex flex-row">
-          <div class="basis-[97%] µ">
+          <div class="basis-[97%]">
             <h3 class="text-xl leading-6 font-bold text-white">{{language.name}}</h3>
-            <p class="mt-1 max-w-2xl text-sm text-white">my language</p>
           </div>
+
           <div class="flex justify-center">
             <button (click)="onEdit(language)" class="text-white rounded-xl w-10 h-10 hover:bg-Jorange">
               <fa-icon transform="grow-12" [icon]="faPencil"></fa-icon>
