--- a/src/app/category-feature/category/category.component.html
+++ b/src/app/category-feature/category/category.component.html
@@ -1,86 +1,120 @@
 <div class="max-w-7xl mt-8 mb-12 mx-auto px-4 sm:px-6 lg:px-8 ">
-  <div class="max-w-3xl mx-auto">
+    <div class="grid grid-cols-2 gap-12">
+      <div
+        class="mt-8 mb-12 mx-auto px-4 sm:px-6 lg:px-8 bg-Jblue rounded-3xl mr-6 ml-6 border-white border-2 bg-gradient-to-b from-indigo-600 to-Jblue h-[320px]">
 
-    <div class="grid grid-cols-2 gap-8">
-      <div class="mt-8 mb-12 mx-auto px-4 sm:px-6 lg:px-8 bg-Jblue rounded-3xl mr-6 ml-6 border-white border-2 bg-gradient-to-b from-indigo-600 to-Jblue ">
-        <button (click)="clear()">RESEt</button>
-        <form [formGroup]="categoryForm" (ngSubmit)="onSubmit()" class="space-y-8 divide-y divide-gray-200 ">
-          <div class="space-y-8 divide-y divide-gray-200 ">
             <div class="pt-8 pb-4">
-              <h3 class="text-lg leading-6 text-bold font-large text-white text-3xl mb-4">Category</h3>
+              <div class="grid grid-cols-2">
+              <h3 class=" leading-6 font-large text-white text-3xl mb-4">Category</h3>
+                <button (click)="clear()" name="reset"
+                        class="justify-center hover:bg-Jorange bg-white items-center h-8 w-22 rounded-xl mb-4">
+                  <p class="text-Jblue hover:text-white font-bold text-lg">Reset form</p>
+                </button>
+              </div>
 
               <hr>
-
-              <div class="sm:col-span-3 mt-4">
+              <form [formGroup]="categoryForm" (ngSubmit)="onSubmit()">
+              <div class="mt-4">
                 <label for="name" class="block text-sm font-medium text-white">Name</label>
                 <div class="mt-1">
                   <input placeholder="name"
                          required type="text" name="name" id="name" formControlName="name"
                          class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
-                  <div *ngIf="categoryForm.get('name')?.dirty && categoryForm.get('name')?.touched && categoryForm.get('name')?.hasError('required')"
-                       class="text-white text-sm italic">
-                     Name is required.
+                  <div
+                    *ngIf="categoryForm.get('name')?.dirty && categoryForm.get('name')?.touched && categoryForm.get('name')?.hasError('required')"
+                    class="text-white text-sm italic">
+                    Name is required.
                   </div>
                 </div>
               </div>
 
 
-                  <input type="checkbox"  name="active" id="active" formControlName="active">
+              <div class="flex bg-white items-center h-10 w-40 rounded-xl mb-4 mt-6">
+                <input type="checkbox" name="active" id="active" formControlName="active"
+                       class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange"
+                       role="switch">
 
-              <div class="flex justify-around mt-8">
+                <span class="ml-3" id="isFormActive">
+    <span [ngClass]="categoryForm.value.active ? 'text-Jorange': 'text-Jblue'"  class="text-lg font-bold">Active </span>
+                </span>
+              </div>
+
+              <div class="flex justify-around mt-4">
                 <div>
-                  <button type="submit" name="submitButton" [disabled]="!categoryForm.valid"  class="justify-center hover:bg-Jorange bg-white items-center h-10 w-48 rounded-xl mb-4">
+                  <button type="submit" name="submitButton" [disabled]="!categoryForm.valid"
+                          class="justify-center hover:bg-Jorange bg-white items-center h-10 w-48 rounded-xl mb-4">
                     <p class="text-Jblue hover:text-white font-bold text-2xl">Submit</p>
                   </button>
                 </div>
               </div>
-            </div>
-          </div>
         </form>
+            </div>
       </div>
 
       <div>
-        <div *ngFor="let category of categories$ | async " class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl border-white border-2 mt-6">
+        <div *ngFor="let category of myCategories$ | async "
+             class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl border-white border-2 mt-2">
           <div class="px-4 py-5 sm:px-6  bg-gradient-to-b from-indigo-500 to-Jblue ">
 
-            <div class="flex flex-row">
-              <div class="basis-[97%] µ">
-                <h3 class="text-xl leading-6 font-bold text-white">{{category.name}}</h3>
-              </div>
-              <div class="flex justify-center">
-                <button (click)="onEdit(category)" class="text-white rounded-xl w-10 h-10 hover:bg-Jorange">
-                  <fa-icon transform="grow-12" [icon]="faPencil"></fa-icon>
-                </button>
-              </div>
-            </div>
+            <div class="flex justify-between ">
+              <button (click)="onEdit(category)"  [ngClass]="categoryForm.value.id === category.id ? 'bg-Jorange': 'hover:bg-Jorange'"   class="text-white rounded-xl w-auto h-10 ">
+              <h3 class="text-xl leading-6 font-bold text-white w-64">{{category.name | shortenContent : 22}}</h3>
+              </button>
 
-          </div>
+              <div class="flex bg-white items-center h-10 w-40 rounded-xl">
+                <input type="checkbox" (click)="toggleActive(category)" *ngIf="category.active === false"
+                       class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange"
+                       role="switch">
+                <input type="checkbox" (click)="toggleActive(category)" *ngIf="category.active === true" checked
+                       class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange"
+                       role="switch">
 
-          <div class="flex justify-between">
-            <div class="flex bg-white items-center h-10 w-40 rounded-xl mb-4 ml-4">
-              <input type="checkbox" (click)="toggleActive(category)"  *ngIf="category.active === false" class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange" role="switch">
-              <input type="checkbox" (click)="toggleActive(category)" *ngIf="category.active === true" checked  class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange" role="switch">
-
-              <span class="ml-3" id="isActive">
-    <span  *ngIf="category.active === false" class="text-lg font-bold text-Jblue ">Active </span>
-          <span  *ngIf="category.active === true" class="text-lg font-bold text-Jorange ">Active </span>
+                <span class="ml-3" id="isActive">
+    <span *ngIf="category.active === false" class="text-lg font-bold text-Jblue ">Active </span>
+          <span *ngIf="category.active === true" class="text-lg font-bold text-Jorange ">Active </span>
   </span>
-            </div>
+              </div>
 
-            <div class="flex justify-center">
-              <button (click)="showDeleteModal(category)" class="text-red-600 hover:text-white bg-white rounded-xl mr-6 mb-4 w-10 h-10 hover:bg-Jorange">
+              <button (click)="showDeleteModal(category)"
+                      class="text-red-600 hover:text-white bg-white rounded-xl w-10 h-10 hover:bg-Jorange">
                 <fa-icon transform="grow-7" [icon]="faTrashCan"></fa-icon>
               </button>
             </div>
           </div>
         </div>
+        <!-- pagination-->
+        <nav class="border-t border-gray-200 px-4 flex items-center justify-between sm:px-0">
+          <div class="-mt-px w-0 flex-1 flex">
+            <button *ngIf="currentPage > 0" class="border-t-2 border-transparent pt-4 pr-1 inline-flex items-center text-sm font-medium text-gray-500 hover:text-gray-700 hover:border-gray-300" (click)="pageChanged(currentPage -1)">
+              <svg class="mr-3 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <path fill-rule="evenodd" d="M7.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l2.293 2.293a1 1 0 010 1.414z" clip-rule="evenodd" />
+              </svg>
+              Previous
+            </button>
+          </div>
+          <div *ngFor="let i of [].constructor(pageAmount || 0); let page = index" class="hidden md:-mt-px md:flex">
+            <button [ngClass]="currentPage === page ? 'border-indigo-500 text-indigo-600': 'text-gray-500 hover:text-gray-700'"  class="border-transparent  hover:border-gray-300 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium" (click)="pageChanged(page)"> {{page + 1}} </button>
+          </div>
+          <div class="-mt-px w-0 flex-1 flex justify-end">
+            <button *ngIf="currentPage+1 < pageAmount" class="border-t-2 border-transparent pt-4 pl-1 inline-flex items-center text-sm font-medium text-gray-500 hover:text-gray-700 hover:border-gray-300" (click)="pageChanged(currentPage + 1)">
+              Next
+              <svg class="ml-3 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
+              </svg>
+            </button>
+          </div>
+        </nav>
       </div>
 
+
     </div>
-  </div>
 </div>
 
 
-
-<app-delete-modal [modal]=showModal [item]="categoryForm.value.name" [category]="'Categories'" [id]="categoryForm.value.id" (deleteItemEvent)="onRemove($event)" (closeModalEvent)="closeDeleteModal($event)">
+<app-delete-modal [modal]=showModal [item]="categoryForm.value.name" [category]="'Categories'"
+                  [id]="categoryForm.value.id" (deleteItemEvent)="onRemove($event)"
+                  (closeModalEvent)="closeDeleteModal($event)">
 </app-delete-modal>
+
+
+
