--- a/src/app/dashboard-feature/cv-template/cv-template.component.html
+++ b/src/app/dashboard-feature/cv-template/cv-template.component.html
@@ -5,11 +5,10 @@
  (myExperiences$ | async)?.length !== 0 &&
  (myCertificates$ | async)?.length !== 0 &&
 (myLanguages$ | async)?.length !== 0"
-  class="max-w-3xl mx-auto mb-4">
-  <div class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl border-white border-2 mt-6 mb-4">
+  class="max-w-3xl mx-auto mb-1">
+  <div class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl border-white border-2 mt-6 ">
     <div class="px-4 py-5 sm:px-6  bg-gradient-to-b from-indigo-500 to-Jblue ">
       <div class="flex justify-between ">
-
         <button
           class="rounded-xl text-white hover:text-Jorange hover:bg-white"
           printSectionId="myCvId"
@@ -20,15 +19,14 @@
           <h3 class="text-xl leading-6 font-bold m-2">print</h3>
         </button>
 
-
         <form [formGroup]="scaleForm">
-          <div class="col-span-2 ">
+          <div class="flex flex-row">
             <div>
-              <h3 class="block text-xl font-medium text-white "> Scale: </h3>
+              <h3 class="block text-xl font-medium text-white m-2"> Scale: </h3>
             </div>
             <div class="mt-1">
               <select id="scale" name="scale" (change)="setScale()" formControlName="scale"
-                      class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md">
+                      class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 h-10 rounded-md">
                 <option>0.2</option>
                 <option>0.3</option>
                 <option>0.4</option>
@@ -46,8 +44,6 @@
             </div>
           </div>
         </form>
-
-
       </div>
     </div>
   </div>
@@ -254,16 +250,16 @@
               <div class="grid grid-cols-2 gap-4 ">
                 <div *ngFor="let skill of mySkills$  | async">
                   <div class="bg-JorangeSelect rounded-lg">
-                  <a [routerLink]="'/skillform/' + skill.id">
-                    <h4 class="ml-2 font-bold hover:bg-white hover:text-Jorange rounded-lg">{{skill.name}}: </h4>
-                  </a>
-                  <p class="mb-4 ml-2 font-bold text-sm">{{skill.description}}</p>
-                  <ul *ngFor="let skillItem of skillItems$ | async">
-                    <div *ngIf="skillItem.skillId === skill.id" class="mt-4 mb-4 text-sm m-2">
-                      <li>-{{skillItem.name}}</li>
-                      <li>{{skillItem.description}}</li>
-                    </div>
-                  </ul>
+                    <a [routerLink]="'/skillform/' + skill.id">
+                      <h4 class="ml-2 font-bold hover:bg-white hover:text-Jorange rounded-lg">{{skill.name}}: </h4>
+                    </a>
+                    <p class="mb-4 ml-2 font-bold text-sm">{{skill.description}}</p>
+                    <ul *ngFor="let skillItem of skillItems$ | async">
+                      <div *ngIf="skillItem.skillId === skill.id" class="mt-4 mb-4 text-sm m-2">
+                        <li>-{{skillItem.name}}</li>
+                        <li>{{skillItem.description}}</li>
+                      </div>
+                    </ul>
                   </div>
                 </div>
               </div>
