--- a/src/app/settings-feature/settings/settings.component.html
+++ b/src/app/settings-feature/settings/settings.component.html
@@ -1,1 +1,12 @@
-<p>settings works!</p>
+
+<div class="max-w-5xl mx-auto">
+  <div class="mt-8 mb-12 mx-auto px-4 sm:px-6 lg:px-8 bg-Jblue rounded-3xl mr-6 ml-6 border-white border-2 bg-gradient-to-b from-indigo-600 to-Jblue ">
+
+    SETTINGS
+  </div>
+</div>
+
+
+
+
+
