--- a/src/app/shared/to-dashboard/to-dashboard.component.html
+++ b/src/app/shared/to-dashboard/to-dashboard.component.html
@@ -1,4 +1,4 @@
-<div>
+<div *ngIf="(user$ | async)?.role === 'COMPANY'">
 <h1 class="font-bold text-3xl">{{(myCandidate$ | async)?.firstname}} {{(myCandidate$ | async)?.lastname}}: {{title}}</h1>
   <a [routerLink]="'/dashboard'">
 <p class="text-sm text-Jblue"> <fa-icon  [icon]="faArrowLeft"></fa-icon> back to dashboard</p>
