--- a/src/app/skill-feature/skill/skill.component.html
+++ b/src/app/skill-feature/skill/skill.component.html
@@ -4,48 +4,56 @@
                       class="mt-6 flex "
     ></app-to-dashboard>
     <!-- data cards -->
-    <div *ngFor="let skill of mySkills$ | async " class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl border-white border-2 mt-6">
+    <div *ngFor="let skill of mySkills$ | async "
+         class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl border-white border-2 mt-6">
       <div class="px-4 py-5 sm:px-6  bg-gradient-to-b from-indigo-500 to-Jblue ">
 
-        <div class="flex flex-row mb-8">
-          <div class="basis-[97%] µ">
+        <div class="flex flex-row">
+          <div class="basis-[97%]">
             <h3 class="text-xl leading-6 font-bold text-white">{{skill.name}}</h3>
             <p class="mt-1 max-w-2xl text-sm text-white">{{skill.description}}</p>
           </div>
+
           <div class="flex justify-center">
             <button (click)="onEdit(skill)" class="text-white rounded-xl w-10 h-10 hover:bg-Jorange">
               <fa-icon transform="grow-12" [icon]="faPencil"></fa-icon>
             </button>
           </div>
         </div>
+      </div>
 
-        <div class="ml-6 " *ngFor="let skillItem of skillItems$ | async">
-          <div class="mt-4" *ngIf="skillItem.skillId === skill.id">
-          <div class="flex flex-row">
-            <div class="basis-[97%] µ">
-              <h3 class="text-xl leading-6 font-bold text-white"> - {{skillItem.name}}</h3>
-              <p class="mt-1 max-w-2xl text-sm text-white">{{skillItem.description}}</p>
+<div class="border-t">
+          <div class="ml-6" *ngFor="let skillItem of skillItems$ | async">
+            <div class="mt-4 mb-2" *ngIf="skillItem.skillId === skill.id">
+              <div class="flex flex-row">
+                <div class="basis-[97%] µ">
+                  <h3 class="text-xl leading-6 font-bold text-white"> - {{skillItem.name}}</h3>
+                  <p class="mt-1 max-w-2xl text-sm text-white">{{skillItem.description}}</p>
+                </div>
+              </div>
             </div>
-          </div>
-          </div>
-
-
         </div>
 
       </div>
-      <div class="flex justify-between">
+
+      <div class="flex justify-between ">
         <div class="flex bg-white items-center h-10 w-40 rounded-xl mb-4 ml-4">
-          <input type="checkbox" (click)="toggleActive(skill)"  *ngIf="skill.active === false" class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange" role="switch">
-          <input type="checkbox" (click)="toggleActive(skill)" *ngIf="skill.active === true" checked  class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange" role="switch">
+          <input type="checkbox" (click)="toggleActive(skill)" *ngIf="skill.active === false"
+                 class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange"
+                 role="switch">
+          <input type="checkbox" (click)="toggleActive(skill)" *ngIf="skill.active === true" checked
+                 class="ml-6 bg-gray-300 relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 text-Jorange focus:ring-offset-2 focus:ring-Jorange"
+                 role="switch">
 
           <span class="ml-3" id="active">
-    <span  *ngIf="skill.active === false" class="text-lg font-bold text-Jblue ">Active </span>
-          <span  *ngIf="skill.active === true" class="text-lg font-bold text-Jorange ">Active </span>
+    <span *ngIf="skill.active === false" class="text-lg font-bold text-Jblue ">Active </span>
+          <span *ngIf="skill.active === true" class="text-lg font-bold text-Jorange ">Active </span>
   </span>
         </div>
 
         <div class="flex justify-center">
-          <button (click)="showDeleteModal(skill)" class="text-red-600 hover:text-white bg-white rounded-xl mr-6 mb-4 w-10 h-10 hover:bg-Jorange">
+          <button (click)="showDeleteModal(skill)"
+                  class="text-red-600 hover:text-white bg-white rounded-xl mr-6 mb-4 w-10 h-10 hover:bg-Jorange">
             <fa-icon transform="grow-7" [icon]="faTrashCan"></fa-icon>
           </button>
         </div>
@@ -53,7 +61,8 @@
     </div>
     <div>
       <div class="pt-2 flex justify-end">
-        <button (click)="onAdd()"   class="justify-center hover:bg-Jorange bg-Jblue items-center h-10 w-48 rounded-xl mb-4 text-white font-bold text-2xl">
+        <button (click)="onAdd()"
+                class="justify-center hover:bg-Jorange bg-Jblue items-center h-10 w-48 rounded-xl mb-4 text-white font-bold text-2xl">
           Add
         </button>
       </div>
@@ -63,28 +72,42 @@
   <!-- pagination-->
   <nav class="border-t border-gray-200 px-4 flex items-center justify-between sm:px-0">
     <div class="-mt-px w-0 flex-1 flex">
-      <button *ngIf="currentPage > 0" class="border-t-2 border-transparent pt-4 pr-1 inline-flex items-center text-sm font-medium text-gray-500 hover:text-gray-700 hover:border-gray-300" (click)="pageChanged(currentPage -1)">
-        <svg class="mr-3 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-          <path fill-rule="evenodd" d="M7.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l2.293 2.293a1 1 0 010 1.414z" clip-rule="evenodd" />
+      <button *ngIf="currentPage > 0"
+              class="border-t-2 border-transparent pt-4 pr-1 inline-flex items-center text-sm font-medium text-gray-500 hover:text-gray-700 hover:border-gray-300"
+              (click)="pageChanged(currentPage -1)">
+        <svg class="mr-3 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
+             fill="currentColor" aria-hidden="true">
+          <path fill-rule="evenodd"
+                d="M7.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l2.293 2.293a1 1 0 010 1.414z"
+                clip-rule="evenodd"/>
         </svg>
         Previous
       </button>
     </div>
     <div *ngFor="let i of [].constructor(pageAmount || 0); let page = index" class="hidden md:-mt-px md:flex">
-      <button [ngClass]="currentPage === page ? 'border-indigo-500 text-indigo-600': 'text-gray-500 hover:text-gray-700'"  class="border-transparent  hover:border-gray-300 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium" (click)="pageChanged(page)"> {{page + 1}} </button>
+      <button
+        [ngClass]="currentPage === page ? 'border-indigo-500 text-indigo-600': 'text-gray-500 hover:text-gray-700'"
+        class="border-transparent  hover:border-gray-300 border-t-2 pt-4 px-4 inline-flex items-center text-sm font-medium"
+        (click)="pageChanged(page)"> {{page + 1}} </button>
     </div>
     <div class="-mt-px w-0 flex-1 flex justify-end">
-      <button *ngIf="currentPage+1 < pageAmount" class="border-t-2 border-transparent pt-4 pl-1 inline-flex items-center text-sm font-medium text-gray-500 hover:text-gray-700 hover:border-gray-300" (click)="pageChanged(currentPage + 1)">
+      <button *ngIf="currentPage+1 < pageAmount"
+              class="border-t-2 border-transparent pt-4 pl-1 inline-flex items-center text-sm font-medium text-gray-500 hover:text-gray-700 hover:border-gray-300"
+              (click)="pageChanged(currentPage + 1)">
         Next
-        <svg class="ml-3 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-          <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
+        <svg class="ml-3 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
+             fill="currentColor" aria-hidden="true">
+          <path fill-rule="evenodd"
+                d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
+                clip-rule="evenodd"/>
         </svg>
       </button>
     </div>
   </nav>
 </div>
 
-<app-delete-modal [modal]=showModal [item]="skillForm.value.name" [category]="'Skills'" [id]="skillForm.value.id" (deleteItemEvent)="onRemove($event)" (closeModalEvent)="closeDeleteModal($event)">
+<app-delete-modal [modal]=showModal [item]="skillForm.value.name" [category]="'Skills'" [id]="skillForm.value.id"
+                  (deleteItemEvent)="onRemove($event)" (closeModalEvent)="closeDeleteModal($event)">
 </app-delete-modal>
 
 
