--- a/src/app/registration-login-feature/login/login.component.html
+++ b/src/app/registration-login-feature/login/login.component.html
@@ -32,11 +32,11 @@
                       </div>
                     </div>
 
-                    <div class="flex items-center justify-between pl-28">
-                      <div class="text-base">
-                        <a href="#" class="font-medium text-black underline hover:text-Jblue"> Forgot your password? </a>
-                      </div>
-                    </div>
+<!--                    <div class="flex items-center justify-between pl-28">-->
+<!--                      <div class="text-base">-->
+<!--                        <a href="#" class="font-medium text-black underline hover:text-Jblue"> Forgot your password? </a>-->
+<!--                      </div>-->
+<!--                    </div>-->
 
                     <div class="pl-16">
                       <button
