new cv generator

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,3 +2,8 @@
   background-image: url("../assets/background.png");
   background-size: cover ;
 }
+
+.scroll {
+  height: 100vh;
+  overflow: auto;
+}
