--- a/src/app/dashboard-feature/dashboard/dashboard.component.scss
+++ b/src/app/dashboard-feature/dashboard/dashboard.component.scss
@@ -1,4 +1,6 @@
-div {
-  max-width: 100%;
-  overflow-x: hidden;
+#pdf-container,
+.cv-viewer {
+  margin-left: 30px;
+  width: 95%;
+  height: 100%;
 }
