--- a/src/app/dashboard-feature/dashboard/dashboard.component.html
+++ b/src/app/dashboard-feature/dashboard/dashboard.component.html
@@ -1,20 +1,23 @@
-<div class="flex-1 relative z-0 flex overflow-hidden ">
-      <main class="flex-1 relative z-0 overflow-y-auto focus:outline-none xl:order-last">
-        <div [ngClass]="company === true && candidate === true ? 'xl:grid xl:grid-cols-2 xl:gap-4 mb-[70px]':''">
 
 
-            <app-candidates [ngClass]="company === true && candidate === true ? '2xl:w-3/4 flex':''" *ngIf="company === true"></app-candidates>
-            <app-cv-template  [ngClass]="company === true && candidate === true ? '2xl:ml-[-230px]':''" *ngIf="candidate === true"></app-cv-template>
+<div id="pdf-container" class="ml-4"  *ngIf="candidate === true">
+  <iframe class="cv-viewer"></iframe>
+</div>
 
+
+
+        <div [ngClass]="company === true && candidate === true ? 'xl:grid xl:grid-cols-2 mb-[70px]':''">
+
+
+
+
+          <app-candidates  *ngIf="company === true"></app-candidates>
+<!--            <app-cv-template  *ngIf="candidate === true"></app-cv-template>-->
         </div>
-      </main>
 
 <!--      <aside class="hidden relative xl:order-first xl:flex xl:flex-col flex-shrink-0 w-96 border-r border-gray-200 overflow-y-auto">-->
 <!--        <app-cv-items></app-cv-items>-->
 <!--      </aside>-->
-    </div>
-
-
 
 
 
